crates/uselesskey-core-x509-spec/tests/snapshots/snapshots_x509_spec__chain_spec_custom.snap
---
source: crates/uselesskey-core-x509-spec/tests/snapshots_x509_spec.rs
assertion_line: 220
expression: chain_shape(&spec)
---
leaf_cn: custom.example.com
root_cn: Custom Root CA
intermediate_cn: Custom Int CA
leaf_sans_count: 2
rsa_bits: 4096
root_validity_days: 7300
intermediate_validity_days: 3650
leaf_validity_days: 90
leaf_not_before: ~
intermediate_not_before: ~
intermediate_is_ca: ~
intermediate_key_usage: ~
stable_bytes_len: 130
