crates/uselesskey-core-x509-spec/tests/snapshots/snapshots_x509_spec__chain_spec_default.snap
---
source: crates/uselesskey-core-x509-spec/tests/snapshots_x509_spec.rs
assertion_line: 203
expression: chain_shape(&spec)
---
leaf_cn: test.example.com
root_cn: test.example.com Root CA
intermediate_cn: test.example.com Intermediate CA
leaf_sans_count: 1
rsa_bits: 2048
root_validity_days: 3650
intermediate_validity_days: 1825
leaf_validity_days: 3650
leaf_not_before: ~
intermediate_not_before: ~
intermediate_is_ca: ~
intermediate_key_usage: ~
stable_bytes_len: 127
