crates/uselesskey-core-x509-spec/tests/snapshots/snapshots_x509_spec__chain_spec_stable_bytes.snap
---
source: crates/uselesskey-core-x509-spec/tests/snapshots_x509_spec.rs
assertion_line: 242
expression: result
---
description: "ChainSpec::new default"
stable_bytes_len: 123
is_deterministic: true
